Build fixes. (#3)